# Zhujian

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: cost_agent.py  progress_agent.py  risk_agent.py  safety_agent.py  weekly_report_agent.py
app/: main.py
app/schemas/: common.py
core/: __init__.py  config.py  constants.py  deps.py  exceptions.py  logger.py  security.py
docker/: docker-compose.yml
docs/: DEPLOYMENT_GUIDE.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
models/: construction_drawing.py  document.py  graph_models.py  project.py  query.py  user.py
repository/: document_repo.py  graph_repo.py  query_log_repo.py  vector_repo.py
scripts/: _check_imports.py  _smoke_imports.py  ingest_docs.py  init_milvus.py  rebuild_index.py
services/: __init__.py
services/admin/: __init__.py  admin_service.py
services/agent/: __init__.py  agent_service.py
services/cache/: redis_client.py
services/document/: cleaner.py  document_service.py  loader.py  metadata.py  ocr_parser.py  splitter.py  word_parser.py
services/drawing/: drawing_service.py
services/embedding/: embedding_model.py
services/graph/: graph_service.py  neo4j_client.py
services/llm/: generator.py  llm_client.py
services/permission/: permission_checker.py
services/project/: __init__.py  project_service.py
services/qa/: __init__.py  qa_service.py
tests/: test_agents.py  test_core_quality.py
tools/: cost_tools.py  progress_tools.py  rag_tool.py  safety_tools.py
(+47 files in other folders)
